--- a/infrastucture/php/php.ini
+++ b/infrastucture/php/php.ini
@@ -905,7 +905,7 @@ default_socket_timeout = 60
 ;
 ;extension=bz2
 ;extension=curl
-;extension=fileinfo
+extension=fileinfo
 ;extension=gd2
 ;extension=gettext
 ;extension=gmp
@@ -913,12 +913,12 @@ default_socket_timeout = 60
 ;extension=imap
 ;extension=interbase
 ;extension=ldap
-;extension=mbstring
+extension=mbstring
 ;extension=exif      ; Must be after mbstring as it depends on it
 ;extension=mysqli
 ;extension=oci8_12c  ; Use with Oracle Database 12c Instant Client
 ;extension=odbc
-;extension=openssl
+extension=openssl
 ;extension=pdo_firebird
 extension=pdo_mysql
 ;extension=pdo_oci
@@ -934,7 +934,7 @@ extension=pdo_mysql
 
 ;extension=soap
 ;extension=sockets
-;extension=sodium
+extension=sodium
 ;extension=sqlite3
 ;extension=tidy
 ;extension=xmlrpc
