--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@ PHP_VERSION=7.3
 MARIADB_VERSION=10.3
 APACHE_VERSION=2.4
 
-PHP_NAME=0-php
-MARIADB_NAME=db
-APACHE_NAME=web
-ADMINER_NAME=adminer
+PHP_NAME=lara_php
+MARIADB_NAME=lara_db
+APACHE_NAME=lara_web
+ADMINER_NAME=lara_adminer
 
 NET_BACKEND=backend
 NET_FRONTEND=frontend
 
 DB_ROOT_PASSWORD=toor
-DB_NAME=sleepy
+DB_NAME=larabase
 DB_USERNAME=user
 DB_PASSWORD=resu
